@@ -70,7 +70,7 @@ public class GDBServerDebugger implements ICDebugger {
 				remote += ":"; //$NON-NLS-1$
 				remote += config.getAttribute(IGDBServerMILaunchConfigurationConstants.ATTR_PORT, "invalid"); //$NON-NLS-1$
 				String[] args = new String[] {"remote", remote}; //$NON-NLS-1$
-				session = (Session)MIPlugin.getDefault().createCSession(gdb, exe.getLocation().toFile(), 0, args, cwd, gdbinit, null);
+				session = MIPlugin.getDefault().createCSession(gdb, exe.getLocation().toFile(), 0, args, cwd, gdbinit, null);
 			} else {
 				MIPlugin plugin = MIPlugin.getDefault();
 				Preferences prefs = plugin.getPluginPreferences();
@@ -78,7 +78,7 @@ public class GDBServerDebugger implements ICDebugger {
 
 				String remote = config.getAttribute(IGDBServerMILaunchConfigurationConstants.ATTR_DEV, "invalid"); //$NON-NLS-1$
 				String remoteBaud = config.getAttribute(IGDBServerMILaunchConfigurationConstants.ATTR_DEV_SPEED, "invalid"); //$NON-NLS-1$
-				session = (Session)MIPlugin.getDefault().createCSession(gdb, exe.getLocation().toFile(), -1, null, cwd, gdbinit, null);
+				session = MIPlugin.getDefault().createCSession(gdb, exe.getLocation().toFile(), -1, null, cwd, gdbinit, null);
 				ICDITarget[] targets = session.getTargets();
 				for (int i = 0; i < targets.length; ++i) {
 					Target target = (Target)targets[i];
